[gd_scene load_steps=31 format=3 uid="uid://0icrr0sawub3"]

[ext_resource type="Script" path="res://Game/Buildings/base_tower.gd" id="1_2smn5"]
[ext_resource type="PackedScene" uid="uid://cb1x6uckfj6ck" path="res://Game/Player/archer_tower.tscn" id="2_devr0"]
[ext_resource type="Texture2D" uid="uid://crdry3wgtdnsh" path="res://Tiny Swords (Update 010)/Factions/Knights/Buildings/Tower/Tower_Construction.png" id="2_pygvq"]
[ext_resource type="Texture2D" uid="uid://cefp22rlcbldx" path="res://Tiny Swords (Update 010)/Factions/Knights/Buildings/Tower/Tower_Blue.png" id="3_d4lmj"]
[ext_resource type="Texture2D" uid="uid://beowi0u6wchu3" path="res://Tiny Swords (Update 010)/Factions/Knights/Buildings/Tower/Tower_Destroyed.png" id="4_d0f3u"]
[ext_resource type="Texture2D" uid="uid://drtdah6ngiivv" path="res://Tiny Swords (Update 010)/Effects/Fire/Fire.png" id="5_ex8r3"]
[ext_resource type="Texture2D" uid="uid://c0ak3sqx7ixi1" path="res://Tiny Swords (Update 010)/Effects/Explosion/Explosions.png" id="6_g4gm1"]

[sub_resource type="SpriteFrames" id="SpriteFrames_kx35i"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_pygvq")
}],
"loop": true,
"name": &"Build",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_d4lmj")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_d0f3u")
}],
"loop": true,
"name": &"destroy",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_w6xei"]
radius = 18.0
height = 80.0

[sub_resource type="AtlasTexture" id="AtlasTexture_qtefe"]
atlas = ExtResource("5_ex8r3")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_vskbm"]
atlas = ExtResource("5_ex8r3")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_x6m0u"]
atlas = ExtResource("5_ex8r3")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_mhkj8"]
atlas = ExtResource("5_ex8r3")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_jqk2v"]
atlas = ExtResource("5_ex8r3")
region = Rect2(512, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_2iu50"]
atlas = ExtResource("5_ex8r3")
region = Rect2(640, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_ta6t4"]
atlas = ExtResource("5_ex8r3")
region = Rect2(768, 0, 128, 128)

[sub_resource type="SpriteFrames" id="SpriteFrames_weiw5"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qtefe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vskbm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x6m0u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mhkj8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jqk2v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2iu50")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ta6t4")
}],
"loop": true,
"name": &"burn",
"speed": 7.0
}, {
"frames": [],
"loop": true,
"name": &"no_burn",
"speed": 5.0
}]

[sub_resource type="Gradient" id="Gradient_ca8ux"]

[sub_resource type="GradientTexture1D" id="GradientTexture1D_8sgm8"]
gradient = SubResource("Gradient_ca8ux")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_ifwkg"]
particle_flag_disable_z = true
spread = 10.0
gravity = Vector3(0, 0, 0)
initial_velocity_min = 400.0
initial_velocity_max = 600.0
orbit_velocity_min = 0.0
orbit_velocity_max = 0.0
damping_min = 700.0
damping_max = 900.0
angle_max = 45.0
scale_min = 2.0
scale_max = 6.0
color = Color(0.611765, 0.611765, 0.611765, 1)
color_initial_ramp = SubResource("GradientTexture1D_8sgm8")

[sub_resource type="AtlasTexture" id="AtlasTexture_3rgew"]
atlas = ExtResource("6_g4gm1")
region = Rect2(0, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_wen4c"]
atlas = ExtResource("6_g4gm1")
region = Rect2(192, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_meylc"]
atlas = ExtResource("6_g4gm1")
region = Rect2(384, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_e8kym"]
atlas = ExtResource("6_g4gm1")
region = Rect2(576, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_fnla4"]
atlas = ExtResource("6_g4gm1")
region = Rect2(768, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_utt2b"]
atlas = ExtResource("6_g4gm1")
region = Rect2(960, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_5va1o"]
atlas = ExtResource("6_g4gm1")
region = Rect2(1152, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_1kv21"]
atlas = ExtResource("6_g4gm1")
region = Rect2(1344, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_r4nde"]
atlas = ExtResource("6_g4gm1")
region = Rect2(1536, 0, 192, 192)

[sub_resource type="SpriteFrames" id="SpriteFrames_mf53b"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3rgew")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wen4c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_meylc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e8kym")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fnla4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_utt2b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5va1o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1kv21")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r4nde")
}],
"loop": false,
"name": &"default",
"speed": 7.0
}]

[node name="StaticBody2D" type="StaticBody2D"]
y_sort_enabled = true
position = Vector2(523, 314)
collision_layer = 3
collision_mask = 0
script = ExtResource("1_2smn5")

[node name="Archer_tower" parent="." instance=ExtResource("2_devr0")]
z_index = 1
position = Vector2(0, -57)

[node name="TowerSprite" type="AnimatedSprite2D" parent="."]
y_sort_enabled = true
position = Vector2(0, 70)
sprite_frames = SubResource("SpriteFrames_kx35i")
offset = Vector2(0, -70)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(3, 72)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_w6xei")

[node name="Fire1" type="Node2D" parent="."]
y_sort_enabled = true
position = Vector2(165, 10)

[node name="Fire" type="AnimatedSprite2D" parent="Fire1"]
y_sort_enabled = true
position = Vector2(-142, 62)
scale = Vector2(0.407813, 0.4)
sprite_frames = SubResource("SpriteFrames_weiw5")
animation = &"burn"
offset = Vector2(1.25, -47.5)

[node name="Fire2" type="Node2D" parent="."]
y_sort_enabled = true
position = Vector2(330, 20)

[node name="Fire" type="AnimatedSprite2D" parent="Fire2"]
y_sort_enabled = true
position = Vector2(-358, -25)
scale = Vector2(0.407813, 0.4)
sprite_frames = SubResource("SpriteFrames_weiw5")
animation = &"burn"
offset = Vector2(1.25, -47.5)

[node name="ParticleInterface" type="Node2D" parent="."]

[node name="BloodParticle" type="GPUParticles2D" parent="ParticleInterface"]
emitting = false
amount = 20
process_material = SubResource("ParticleProcessMaterial_ifwkg")
lifetime = 0.4
one_shot = true
explosiveness = 0.9
fixed_fps = 7

[node name="Explosion" type="Node2D" parent="."]
visible = false
y_sort_enabled = true

[node name="Explosion" type="AnimatedSprite2D" parent="Explosion"]
y_sort_enabled = true
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_mf53b")
